# trust-audit-framework

./: .gitignore  ARCHITECTURE.md  AUDIT-CHECKLIST.md  AUDIT_REPORT.md  CHANGELOG.md  CLAWFS_INTEGRATION.md  CLAWHUB.md  CLAWVAULT_RESEARCH.md  CLAWVM-SPEC.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ClawResilience-Design.md  DIFFERENTIATORS.md  ENV_SETUP.md  EVANGELISM.md  FINAL_E2E_REPORT.json  GAPS_STATUS.md  GLOSSARY.md  HEARTBEAT.md  KIMI_FEEDBACK.md  KIMI_FEEDBACK_2.md  LAUNCH-CHECKLIST.md  LICENSE  MEMORY.md  MERGE_SUMMARY.md  MILESTONES.md  MOLTOS_AUDIT_REPORT.md  MOLTOS_GUIDE.md  PHASE2_DESIGN.md  README.md  RESEARCH_0.22.md  RESEARCH_0.23.md  RESEARCH_0.24.md  SECURITY.md  SELF_AUDIT_REPORT.json  SKILL.md  SWEEP_PLAN.md  TOOLS.md  V2_PLAN.md  WHATS_NEW.md  (+25 more)
.clawhub/: lock.json
.husky/: pre-commit
.local-memory/: bus-policy.ts  bus-test.ts  clawbus-preflight.md  clawbus.ts  clawforge-research.md  clawfs-implementation.ts  clawfs-integration.md  clawfs-monte-carlo.ts  clawfs-research.md  clawfs-summary.md  clawfs-test-3agents.ts  clawkernel-preflight.md  clawkernel-sandbox-tests.ts  clawkernel-updated.ts  clawos-architecture.md  clawos-master-briefing.md  clawos-roadmap-internal.md  clawsandbox-benchmarks.ts  clawsandbox-implementation.ts  clawsandbox-integration.md  clawsandbox-research.md  clawsandbox-rogue-test.ts  clawsandbox-summary.md  gap-analysis.md  master-context.md  os-features-roadmap.md  path2-handoff-protocol.md  signups-log.md  signups-monitor.md
arbitra/: DEBUG-REPORT.md  DEPLOYMENT-CHECKLIST.md  SKILL.md  monitoring-loop.js  supabase-production.sql  supabase-schema.sql
assets/: README.md  demo-text.md  demo.tape
campaigns/: 24hour-flywheel-campaign.md  cycle-2-godmode.md
claw/: Cargo.toml
claw-orchestrator/: Cargo.toml  README.md
claw-orchestrator/src/: main.rs
claw/src/: main.rs
claw/templates/: fly.toml
clawforge-protocol/: control-plane.d.ts  control-plane.d.ts.map  control-plane.js  control-plane.js.map  control-plane.ts
clawfs/: Cargo.toml  README.md
clawid-protocol/: clawid-token.d.ts  clawid-token.d.ts.map  clawid-token.js  clawid-token.js.map  clawid-token.ts
clawkernel-protocol/: kernel.d.ts  kernel.d.ts.map  kernel.js  kernel.js.map  kernel.ts
clawos-core/: Cargo.toml
clawvm/: Cargo.toml  README.md
clawvm/src/: main.rs
committee/: simulator.py  simulator_v2.py
docker/: Dockerfile.claw  Dockerfile.molt  Dockerfile.orchestrator  README.md
docs/: AGENT_INTEGRITY.md  AGENT_TEAMS.md  AGENT_TO_AGENT.md  API_COMMITTEE_INTELLIGENCE.md  ARBITER_INTEGRATION_TEST_PLAN.md  AUTH_AND_SIGNATURES.md  BACKUP_RECOVERY.md  CLAIMS_AUDIT.md  DECENTRALIZATION_ROADMAP.md  ENVIRONMENT_VARIABLES.md  GETTING_STARTED.md  KEY_RECOVERY.md  LANGCHAIN_INTEGRATION.md  MOLTBOOK_POST_V0.12_PREVIEW.md  PAYMENT_LAYER_SPEC.md  PHASE7_PRODUCTION_HARDENING.md  PLATFORM_BROADCAST_POLICY.md  ROADMAP_v0.13.md  SDK_GUIDE.md  SECURITY_AUDIT_REPORT.md  SIGNIN_WITH_MOLTOS.md  STUB_AUDIT.md  TAP_PROTOCOL.md  THURSDAY_TEST_TEMPLATE.md  WOT_ATTESTATION_STAKES_DESIGN.md  openapi.yaml
drafts/: finapp-dm.txt
examples/: README.md  genesis-agent-demo.ts
go-sdk/: README.md  clawos.go  go.mod
memory/: 2026-03-05.md  2026-03-07-CBA-COMPLETE.md  2026-03-07-IMPLEMENTER-HUNT.md  2026-03-07-SKILLGUARD-INTEGRATION.md  2026-03-07-bio-update.md  2026-03-07-middleware-completion.md  2026-03-07-milestone.md  2026-03-07-teaser.md  2026-03-07.md  2026-03-18.md  2026-03-19.md  MOLtBOOK_API.md  MOLtBOOK_PERFORMANCE.md  SCHEDULED_POSTS_T0.md  SCHEDULED_T1_TO_T6.md  STEP5_OUTREACH_LOG.md  T0_SEQUENCE_LOCKED.md  T0_VICTORY_POSTS.md  VICTORY_T1H.md  VICTORY_T2H.md  VICTORY_T30.md  VIRAL_RESEARCH.md  arbitra-integration.json  arbitra-test-result.json  checkpoint-march7-1308.md  credentials.json  critical-issues-march7.md  deployment-test-report.md  diversified-engagement.md  engagement-campaign-1440.md  full-meltdown-reboot-complete.md  grok-final-merged-page.md  grok-part3-agent-network.md  grok-waitlist-implemented.md  growth-engine-v1.json  lnhyper-engagement.md  moltbook-7hour-check.md  moltbook-check-1328.md  moltbook-conversations-2026-03-07.md  moltbook-deep-scan.md  (+14 more)
molt/: Cargo.toml
molt-orchestrator/: Cargo.toml  README.md
molt-orchestrator/src/: lib.rs  main.rs
moltfs/: Cargo.toml  README.md
moltfs/src/: lib.rs  main.rs
moltos-core/: Cargo.toml
moltos-core/src/: bindings.rs  lib.rs
moltos-escrow/: .env.example  hardhat.config.js  package.json
moltvm/: Cargo.toml  README.md
moltvm/src/: main.rs  vm.rs
money_empire/: 4-layer-framework.md  dashboard.py  economic-simulator.py  failure-mode-taxonomy-v11.md  trust-ledger-example.md  weekend-onboarding-guide.md
observability/: Cargo.toml
observability/src/: lib.rs  main.rs
prompts/: grok-deep-dive-prompt.md
python-sdk/: Cargo.toml  README.md  pyproject.toml
python-sdk/src/: lib.rs
research/: 5_retrieval_rule_analysis.md  agent-workflow-patterns-analysis.md  agent_memory_systems_analysis.md  agent_needs_analysis.md  analytics-dashboard-spec.md  distributed-fs-analysis.md  documentation-strategy-report.md  kubernetes-reliability-painpoints.md  phase4_recommendation.md  service-discovery-pain-points.md  v0.11-v0.12-analysis.md  workflow-orchestration-analysis.md  x402-tap-integration.md
scripts/: .signup-monitor-state.json  backup.sh  check-agents-fk.js  check-dm-conversations.js  check-registry.js  deploy-migration-026.sh  deploy-migrations-safe.js  generate-calibration-report.js  monitor-agents.js  monitor-signups.js  read-dm-conversations.js  read-pending-dms.js  restore.sh  security-audit.sh  seed-registry.js  send-dm-autopilotai.js  send-dm-correction.js  test-auth.js  test-direct-update.js  test-e2e.sh
sdk/: README.md  package.json  swarm-job.yaml
skills/: arbitra.md
supabase/: ralph_fixes.sql
tap-contracts/: TAPFoundingNFT.sol  (+2 more)
tap-sdk-python/: README.md  pyproject.toml
tap-sdk-python/moltos/: __init__.py  client.py  exceptions.py
tap-sdk-python/moltos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/stress/: Cargo.toml
tests/stress/benches/: stress.rs
(+1234 files in other folders)
