[package]
name = "claw"
version = "0.1.0"
edition = "2021"
description = "ClawOS CLI — The Agent Economy OS command-line interface"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
observability = { path = "../observability" }
clawvm = { path = "../clawvm" }
clawfs = { path = "../clawfs" }
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
