[package]
name = "clawvm"
version = "0.1.1"
edition = "2021"
description = "ClawVM — The native WASM runtime for ClawOS — The Agent Economy OS"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
wasmtime = "25"
wasmtime-wasi = "25"
