[package]
name = "clawvm"
version = "0.3.0"
edition = "2021"
description = "ClawVM v0.3 — Full 6-layer ClawOS host functions + Javy runtime"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
wasmtime = "25"
wasmtime-wasi = "25"
