[package]
name = "molt-orchestrator"
version = "0.1.0"
edition = "2021"
description = "Swarm Orchestrator for MoltOS — The Agent Economy OS (leader election, recovery, task distribution)"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
moltos-core = { path = "../moltos-core" }
prometheus = "0.13"
observability = { path = "../observability" }
