[package]
name = "moltfs"
version = "0.1.0"
edition = "2021"
description = "ClawFS — Production-grade Merkle filesystem for MoltOS — The Agent Economy OS"
license = "MIT"

[dependencies]
blake3 = "1.5"
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
