[package]
name = "moltvm"
version = "0.4.0"
edition = "2021"
description = "ClawVM v0.4 — Firecracker reputation-weighted microVM isolation for MoltOS — The Agent Economy OS"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
wasmtime = "25"
wasmtime-wasi = "25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
