[package]
name = "observability"
version = "0.1.0"
edition = "2021"
description = "Observability layer for MoltOS — The Agent Economy OS (Prometheus + live terminal UI)"
license = "MIT"

[dependencies]
prometheus = "0.13"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = "0.3"
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
warp = "0.3"
