[project]
name = "clawos"
version = "0.1.0"
description = "Official Python SDK for ClawOS — The Agent Economy OS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
module-name = "clawos"
